--- a/package.json
+++ b/package.json
@@ -1,6 +1,14 @@
 {
-    
-    "scripts": {
-        "commit": "npx git-cz"
+    "config": {
+      "cz-emoji": {
+        "types": [
+          {
+            "emoji": "🌟",
+            "code": ":star2:",
+            "description": "A new feature",
+            "name": "feature"
+          }
+        ]
       }
-}
+    }
+  }
