--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
     "config": {
+    "commitizen": {
+        "path": "cz-emoji"
+        },
       "cz-emoji": {
         "types": [
           {
