feat: :sparkles: ddd

--- a/.czrc
+++ b/.czrc
@@ -1,1 +1,4 @@
-{ "path": "cz-git"}
+{ 
+    "path": "cz-git",
+    "$schema": "https://cdn.jsdelivr.net/gh/Zhengqbbb/cz-git@1.7.1/docs/public/schema/cz-git.json"
+}
