--- a/.czrc
+++ b/.czrc
@@ -1,4 +1,3 @@
 { 
-    "path": "cz-git",
-    "$schema": "https://cdn.jsdelivr.net/gh/Zhengqbbb/cz-git@1.7.1/docs/public/schema/cz-git.json"
+    "path": "cz-git"
 }
